# manifestoo

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HISTORY.rst  LICENSE  README.md  mk_core_addons  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: addons_path.md  addons_selection.md  api.md  changelog.rst  cli.md  conf.py  develop.md  gen_cli_doc.py  getting-started.md  index.md  installation.md
news/: 1.removal  11.feature  15.feature  161.feature  17.feature  18.bugfix  22.feature  25.feature  26.feature  28.bugfix  3.doc  30.misc  32.misc  33.removal  53.feature  62.feature  68.bugfix  69.feature  7.feature  74.feature  75.feature
src/manifestoo/: __init__.py  __main__.py  addon.py  addon_sorter.py  addons_path.py  addons_selection.py  addons_set.py  dependency_iterator.py  echo.py  exceptions.py  git.py  license.py  main.py  manifest.py  odoo_series.py  options.py  utils.py  version.py
src/manifestoo/commands/: check_dev_status.py  check_licenses.py  interactive_tree.py  list.py  list_codepends.py  list_depends.py  list_external_dependencies.py  tree.py
src/manifestoo/core_addons/: __init__.py  addons-12.0-c.txt  addons-12.0-e.txt  addons-12c.txt  addons-12e.txt  addons-13.0-c.txt  addons-13.0-e.txt  addons-13c.txt  addons-13e.txt  addons-14.0-c.txt  addons-14.0-e.txt  addons-14c.txt  addons-14e.txt  addons-15.0-c.txt  addons-15.0-e.txt  addons-16.0-c.txt  addons-16.0-e.txt  addons-8.0-e.txt
tests/: common.py  test_addon.py  test_addons_path.py  test_addons_selection.py  test_addons_set.py  test_cmd_check_dev_status.py  test_cmd_check_licenses.py  test_cmd_list.py  test_cmd_list_codepends.py  test_cmd_list_depends.py  test_cmd_list_external_dependencies.py  test_cmd_list_git.py  test_dependency_iterator.py  test_echo.py  test_list_missing.py  test_manifest.py  test_odoo_series.py  test_tree.py  test_utils.py  test_version.py
