[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "manifestoo"
author = "Stéphane Bidoul"
author-email = "stephane.bidoul@acsone.eu"
home-page = "https://github.com/sbidoul/manifestoo"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Odoo",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
description-file = "README.md"
requires = [
    "typer[all] ~=0.3.2",
    "importlib_resources ; python_version<'3.7'"
]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "coverage[toml]",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    "typer-cli",  # to generate docs/cli.md
    "towncrier",
]

[tool.flit.metadata.urls]
Documentation = "https://manifestoo.readthedocs.io/en/stable/"
Changelog = "https://manifestoo.readthedocs.io/en/stable/changelog.html"
Source = "https://github.com/sbidoul/manifestoo"

[tool.flit.scripts]
manifestoo = "manifestoo.main:app"
moo = "manifestoo.main:app"

[tool.flit.sdist]
exclude = [".github/"]


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.coverage.run]
branch = true
source_pkgs = ["manifestoo"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]

[tool.towncrier]
package = "manifestoo"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "[{issue}](https://github.com/sbidoul/manifestoo/issuers/{issue})"
title_format = "{version} ({project_date})"
