[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "manifestoo"
description = "A tool to reason about Odoo addons manifests"
authors = [
  {name = "Stéphane Bidoul", email = "stephane.bidoul@acsone.eu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Odoo",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"
dependencies = [
    "manifestoo_core >= 0.8",
    "textual >= 0.6",
    "typer >= 0.12.1",
    "importlib_metadata ; python_version<'3.8'",
]
requires-python = ">=3.7"
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "textual[dev]",
]
test = [
    "pytest",
    "coverage[toml]",
]
doc = [
    "sphinx",
    "furo",
    "myst-parser",
    "towncrier",
    "sphinxcontrib-towncrier",
]

[project.urls]
Homepage = "https://github.com/acsone/manifestoo"
Documentation = "https://manifestoo.readthedocs.io/en/stable/"
Changelog = "https://manifestoo.readthedocs.io/en/stable/changelog.html"
Source = "https://github.com/acsone/manifestoo"

[project.scripts]
manifestoo = "manifestoo.main:app"
moo = "manifestoo.main:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "/.github",
]


[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
    "W",
]
ignore = [
]
exclude = [
    "docs/conf.py",
]

[tool.ruff.lint.isort]
known-first-party = ["manifestoo", "manifestoo_core"]

[tool.ruff.lint.per-file-ignores]
"src/manifestoo/main.py" = ["B008"]


[tool.coverage.run]
branch = true
source_pkgs = ["manifestoo"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
]


[tool.towncrier]
package = "manifestoo"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/acsone/manifestoo/issues/{issue}>`_"
title_format = "{version} ({project_date})"
